                            -) changed velocity equation for 'boundary.wall="damping"' :
                                           ver <= 0.1-58   ->    ver >= 0.1-59
                                 v[t+1] :   v[t]           ->      -v[t]                 (when x[t+1] > x_max | x[t+1] < x_min )
                              

        o Running 'hydroPSO' >= 0.1-59 with default settings will produce DIFFERENT RESULTS from those obtained with 'hydroPSO' <= 0.1-58, due to the 
                               following changes in default values:
                                              ver <= 0.1-58   ->    ver >= 0.1-59
                            -) npart        : 10+2*[sqrt(n)]  ->   40
                            -) Vini.type    : 'lhs2007'       ->  'random2011'
                            -) boundary.wall: 'reflecting'    ->  'absorbing2011'
                            
                            -) TVc1.type    : 'non-linear'    ->  'linear' (no effect, because 'use.TVc1=FALSE' by default)
                            -) TVc2.type    : 'non-linear'    ->  'linear' (no effect, because 'use.TVc2=FALSE' by default)
                            -) TVlambda.type: 'non-linear'    ->  'linear' (no effect, because 'use.TVlambda=FALSE' by default)

                            -) boundary.wall: 'reflecting' in  hydroPSO ver <= 0.1-58 is not longer equivalent to 'reflecting' in 
                               hydroPSO ver >= 0.1-58
                               
        o 'test_functions': -) new benchmark functions: 
                               'schwefel'    : Schwefel function
                               'ssphere'     : shifted Sphere (CEC 2005), 
                               'srosenbrock' : shifted Rosenbrock (CEC 2005), 
                               'srastrigin'  : shifted Rastrigin (CEC 2005),  
                               'sgriewank'   : shifted Griewank (CEC 2005),  
                               'sackley'     : shifted Ackley (CEC 2005),   