@@ -40,6 +40,8 @@ NEWS/ChangeLog for hydroPSO
                             -) changed velocity equation for 'boundary.wall="damping"' :
                                            ver <= 0.1-58   ->    ver >= 0.1-59
                                  v[t+1] :   v[t]           ->      -v[t]                 (when x[t+1] > x_max | x[t+1] < x_min )
+                            -) when the control argument 'out.with.fit.iter' (not used so far) is set to TRUE, the number of iterations returned
+                               correspond to the effective number of iterations carried out, not the maximum defined by 'maxit'
                               
 
         o Running 'hydroPSO' >= 0.1-59 with default settings will produce DIFFERENT RESULTS from those obtained with 'hydroPSO' <= 0.1-58, due to the 
@@ -69,7 +71,7 @@ NEWS/ChangeLog for hydroPSO
                             -) argument 'sim' may also be 'integer' (before it had to be 'numeric' != 'integer')
                             
         o 'hydromod'      : -) if the 'hydroGOF' package is not available, a simple correlation plot is produced between observations and 
-                               the best simulations
+                               the best simulation
                             -) improved documentation        
         
         
